--- a/beepbeep.css
+++ b/beepbeep.css
@@ -1,10 +1,12 @@
 
 #map {
-    width: 960px;
-    height: 500px;
+    width: 100%;
+    height: 100vh;
 }
 
 .leaflet-container {
+    width: 100%;
+    height: 100vh;
     /* Scale down the map to give it a pixelated look */
     transform: scale(0.1);
     /* Scale back up to the original size */
@@ -17,6 +19,8 @@
     transform: scale(10);  /* Inverse of scale(0.1) */
     transform-origin: top left;
     overflow: hidden;
+    width: 100%;
+    height: 100vh;
 }
 
 /*
